--- a/privacy.html
+++ b/privacy.html
@@ -51,7 +51,7 @@
     </ul>
 
     <h2>Contact</h2>
-    <p>Questions? Email us at <a href="mailto:support@example.com">support@example.com</a>.</p>
+    <p>Questions? Email us at <a href="mailto:support@example.com">cpickard2790@gmail.com</a>.</p>
 
     <h2>Changes</h2>
     <p>We may update this policy as the app evolves. We’ll change the date at the top when we do.</p>
